add property inspector elements

--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -21,24 +21,23 @@
             This will get the 'key', which is sent to the plugin (or settings), along with the value of
             the control.
           -->
+            <div class="sdpi-item">
+              <div class="sdpi-item-label">Dot Color</div>
+              <input id="dotcolor" class="sdpi-item-value" type="text" value="#bf0000" pattern="#[0-9A-Fa-f]{6}" />
+            </div>
+            <div class="sdpi-item">
+              <div class="sdpi-item-label">Inactive Color</div>
+              <input id="inactivecolor" class="sdpi-item-value" type="text" value="#888888" pattern="#[0-9A-Fa-f]{6}" />
+            </div>
+            <div class="sdpi-item">
+              <div class="sdpi-item-label">Background Color</div>
+              <input id="backgroundcolor" class="sdpi-item-value" type="text" value="#000000" pattern="#[0-9A-Fa-f]{6}"/>
+            </div>
 
-            <!-- <div class="sdpi-item">
-                <div class="sdpi-item-label">Name</div>
-                <input id="mynameinput" class="sdpi-item-value" type="text" value="" />
-             </div>
-
-            <div type="textarea" class="sdpi-item">
-                <div class="sdpi-item-label up20" data-localize="Message">Message</div>
-                <div class="sdpi-item-value textarea">
-                  <textarea type="textarea" maxlength="50" id="mymessage" class="three-lines"></textarea>
-                  <label for="mymessage">0/50</label>
-                </div>
-              </div>
-
-              <div class="sdpi-item">
-                <div class="sdpi-item-label">Button</div>
-                <button class="sdpi-item-value" id="clickme" value="Click Me" data-localize="Click me">Click Me</button>
-              </div> -->
+            <div class="sdpi-item">
+              <div class="sdpi-item-label"></div>
+              <button class="sdpi-item-value" id="setdefault" value="Set Default" data-localize="Click me">Set Default</button>
+            </div>
 
 
               <!-- END OF SDPI-WRAPPER -->
