--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -12,30 +12,42 @@
         <div class="sdpi-wrapper">
 
           <!-- DROP HTML-STUFF BELOW -->
-
-          <!--
-            Here we just copied a couple of elements from the PISamples example, which contains
-            a huge collection pre-made HTML-elements for you to use.
-            Important here is (if you plan to communicate from the Property Inspector to the plugin without
-            further programming), that you add an 'id' to an element's control. 
-            This will get the 'key', which is sent to the plugin (or settings), along with the value of
-            the control.
-          -->
-            <div class="sdpi-item">
+            <!-- <div class="sdpi-item">
               <div class="sdpi-item-label">Dot Color</div>
               <input id="dotcolor" class="sdpi-item-value" type="text" value="#bf0000" pattern="#[0-9A-Fa-f]{6}" />
+            </div> -->
+            <div type="checkbox" class="sdpi-item">
+              <div class="sdpi-item-label">Appearance</div>
+              <div class="sdpi-item-value ">
+                  <input id="showSeconds" type="checkbox" value="show seconds">
+                  <label for="showSeconds"><span></span>Show Seconds</label>
+                  <input id="showDate" type="checkbox" value="show date">
+                  <label for="showDate"><span></span>Show Date</label>
+              </div>
             </div>
-            <div class="sdpi-item">
+            <div type="range" class="sdpi-item" id="dotcolorSlider">
+              <div class="sdpi-item-label">Dot Color</div>
+              <div class="sdpi-item-value">
+                  <input type="color" pattern="#[0-9A-Fa-f]{6}" id="dotcolor" value="#ab0000">
+              </div>
+            </div>
+
+            <div type="range" class="sdpi-item" id="inactivecolorSlider">
               <div class="sdpi-item-label">Inactive Color</div>
-              <input id="inactivecolor" class="sdpi-item-value" type="text" value="#888888" pattern="#[0-9A-Fa-f]{6}" />
+              <div class="sdpi-item-value">
+                  <input type="color" pattern="#[0-9A-Fa-f]{6}" id="inactivecolor" value="#888888">
+              </div>
             </div>
-            <div class="sdpi-item">
+
+            <div type="range" class="sdpi-item" id="backgroundcolorSlider">
               <div class="sdpi-item-label">Background Color</div>
-              <input id="backgroundcolor" class="sdpi-item-value" type="text" value="#000000" pattern="#[0-9A-Fa-f]{6}"/>
+              <div class="sdpi-item-value">
+                  <input type="color" pattern="#[0-9A-Fa-f]{6}" id="backgroundcolor" value="#000000" pattern="#[0-9A-Fa-f]{6}">
+              </div>
             </div>
 
             <div class="sdpi-item">
-              <div class="sdpi-item-label"></div>
+              <!-- <div class="sdpi-item-label"></div> -->
               <button class="sdpi-item-value" id="setdefault" value="Set Default" data-localize="Click me">Set Default</button>
             </div>
 
@@ -48,5 +60,14 @@
         <script src="js/common.js"></script>
         <script src="js/common_pi.js"></script>
         <script src="js/index_pi.js"></script>
+        <script>
+          // function updateColor() {
+          //   const colorSlider = document.getElementById('color-slider');
+          //   const colorInput = document.getElementById('dotcolor');
+          //   const colorValue = Number(colorSlider.value).toString(16);
+          //   colorInput.value = '#' + ('000000' + colorValue).slice(-6);
+          // }
+
+        </script>
     </body>
     </html>
