--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -19,10 +19,10 @@
             <div type="checkbox" class="sdpi-item">
               <div class="sdpi-item-label">Appearance</div>
               <div class="sdpi-item-value ">
-                  <input id="showSeconds" type="checkbox" value="show seconds">
-                  <label for="showSeconds"><span></span>Show Seconds</label>
-                  <input id="showDate" type="checkbox" value="show date">
-                  <label for="showDate"><span></span>Show Date</label>
+                  <input id="showseconds" type="checkbox" value="show seconds">
+                  <label for="showseconds"><span></span>Show Seconds</label>
+                  <input id="showsate" type="checkbox" value="show date">
+                  <label for="showdate"><span></span>Show Date</label>
               </div>
             </div>
             <div type="range" class="sdpi-item" id="dotcolorSlider">
