new fields localisation

--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -21,7 +21,7 @@
               <div class="sdpi-item-value ">
                   <input id="showseconds" type="checkbox" value="show seconds">
                   <label for="showseconds"><span></span>Show Seconds</label>
-                  <input id="showsate" type="checkbox" value="show date">
+                  <input id="showdate" type="checkbox" value="show date">
                   <label for="showdate"><span></span>Show Date</label>
               </div>
             </div>
