add date format selection if applicable

--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -22,6 +22,17 @@
               </select>
             </div>
 
+            <div class="sdpi-item" id="dateTypeSelector">
+              <div class="sdpi-item-label">Date Format</div>
+              <select class="sdpi-item-value select" id="dateType">
+                 <option value="mm-dd">MM-DD</option>
+                 <option value="dd-mm">DD-MM</option>
+                 <option value="dd-mm-yy">DD-MM-YY</option>
+                 <option value="mm-dd-yy">MM-DD-YY</option>
+                 <option value="yy-mm-dd">YY-MM-DD</option>
+              </select>
+            </div>
+
             <div type="range" class="sdpi-item" id="dotcolorSlider">
               <div class="sdpi-item-label">Dot Color</div>
               <div class="sdpi-item-value">
