--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -33,6 +33,14 @@
               </select>
             </div>
 
+            <div class="sdpi-item" id="hourTypeSelector">
+              <div class="sdpi-item-label">Hour Format</div>
+              <select class="sdpi-item-value select" id="hourFormat">
+                 <option value="24">24 Hour</option>
+                 <option value="12">12 Hour</option>
+              </select>
+            </div>
+
             <div type="range" class="sdpi-item" id="dotcolorSlider">
               <div class="sdpi-item-label">Dot Color</div>
               <div class="sdpi-item-value">
