add am/pm indication option

--- a/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/index.html
@@ -41,6 +41,14 @@
               </select>
             </div>
 
+            <div class="sdpi-item" id="ampmindicatorSelector">
+              <div class="sdpi-item-label">Show AM/PM indicator</div>
+              <select class="sdpi-item-value select" id="ampmindicator">
+                 <option value="true">Yes</option>
+                 <option value="false">No</option>
+              </select>
+            </div>
+
             <div type="range" class="sdpi-item" id="dotcolorSlider">
               <div class="sdpi-item-label">Dot Color</div>
               <div class="sdpi-item-value">
